progess on going with feature and database creation for discussionRoleManager created

--- a/DiscussionRoleManager/src/main/resources/application.properties
+++ b/DiscussionRoleManager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=DiscussionRoleManager
-spring.datasource.url=jdbc:mysql://localhost:3306/group_discussions
+spring.datasource.url=jdbc:mysql://localhost:3306/discussion_role_manager
 spring.datasource.username=root
 spring.datasource.password=arjun7945
 spring.jpa.hibernate.ddl-auto=update
