--- a/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
+++ b/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
   collection: 1.18.0
+  dio: 5.7.0
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   font_awesome_flutter: 10.7.0
@@ -42,8 +43,6 @@ dependencies:
   intl: 0.19.0
   livespeechtotext: 1.0.9
   json_path: 0.7.2
-  openapi: 
-    path: ./openapi
   page_transition: 2.1.0
   path_provider: 2.1.4
   path_provider_android: 2.2.10
