--- a/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
+++ b/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   go_router: 12.1.3
   google_fonts: 6.1.0
   intl: 0.19.0
-  livespeechtotext: 1.0.9
   json_path: 0.7.2
   page_transition: 2.1.0
   path_provider: 2.1.4
@@ -61,7 +60,6 @@ dependencies:
   sqflite: 2.3.3+1
   sqflite_common: 2.5.4+3
   timeago: 3.6.1
-  translator: 1.0.3+1
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
   url_launcher_ios: 6.3.1
@@ -70,9 +68,10 @@ dependencies:
   url_launcher_platform_interface: 2.3.2
   url_launcher_web: 2.3.3
   url_launcher_windows: 3.1.2
-  deepgram_speech_to_text: 2.3.2
-  flutter_sound: 9.17.8
-  http_multi_server: 3.2.2
+  #built_value: 8.1.3
+  openapi:
+    path: ./openapi
+
 
 
   # The following adds the Cupertino Icons font to your application.
