--- a/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
+++ b/Pomodoro_break/frontend/pomodoro_break/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   shared_preferences_windows: 2.4.1
   sqflite: 2.3.3+1
   sqflite_common: 2.5.4+3
+  simple_gradient_text: 1.3.0
   timeago: 3.6.1
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
@@ -77,6 +78,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  circular_menu: ^4.0.0
 
 dependency_overrides:
   http: 1.2.2
