--- a/lifescript/habittracker backend/habittracker/src/main/resources/application.properties
+++ b/lifescript/habittracker backend/habittracker/src/main/resources/application.properties
@@ -1,8 +1,8 @@
+spring.application.name=HabitTracker
 spring.datasource.url=jdbc:mysql://localhost:3306/habittracker
 spring.datasource.username=root
 spring.datasource.password=sreeja
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
