perfect day feature backend generated using jhipster completed

--- a/lifescript001/002-implementations/servers/lifescript/perfectday_plan/perfect_daybackend/src/main/resources/config/application.yml
+++ b/lifescript001/002-implementations/servers/lifescript/perfectday_plan/perfect_daybackend/src/main/resources/config/application.yml
@@ -94,7 +94,7 @@ spring:
     name: perfectdaybackend
   docker:
     compose:
-      enabled: true
+      enabled: false
       lifecycle-management: start-only
       file: src/main/docker/services.yml
   profiles:
@@ -223,3 +223,6 @@ jhipster:
 # ===================================================================
 
 # application:
+logging:
+  level:
+    org.springframework.security: DEBUG
