--- a/lifescript001/002-implementations/client/life_script/life_script/perfectday_frontend/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/perfectday_frontend/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
     sdk: flutter 
   flutter_web_plugins:
     sdk: flutter
-  openapi:
+  openapiperfectday:
     path: ./openapi
   flutter_bloc: ^9.0.0
   auto_size_text: 3.0.0
