--- a/lifescript001/002-implementations/servers/lifescript/communication/src/main/resources/config/application.yml
+++ b/lifescript001/002-implementations/servers/lifescript/communication/src/main/resources/config/application.yml
@@ -40,6 +40,7 @@ management:
           - loggers
           - prometheus
           - threaddump
+          - caches
           - liquibase
   endpoint:
     health:
@@ -212,7 +213,7 @@ jhipster:
     license: unlicensed
     license-url:
   security:
-    content-security-policy: "default-src 'self'; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com data:"
+    content-security-policy: "default-src 'self'; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:"
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
