--- a/lifescript001/002-implementations/servers/lifescript/habittracker_plan/habittracker_backend/src/main/resources/config/application-dev.yml
+++ b/lifescript001/002-implementations/servers/lifescript/habittracker_plan/habittracker_backend/src/main/resources/config/application-dev.yml
@@ -33,7 +33,7 @@ spring:
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker
-    url: jdbc:mysql://localhost:3306/habittrackBackend?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/habittrackBackend?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
   mail:
     host: localhost
     port: 25
