--- a/lifescript001/002-implementations/client/life_script/life_script/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/pubspec.yaml
@@ -1,7 +1,7 @@
 name: life_script
 description: A new Flutter project.
 
-publish_to: 'none' # Prevent accidental publishing
+publish_to: 'none' 
 
 version: 1.0.0+1
 
