--- a/lifescript001/002-implementations/client/life_script/life_script/perfectday_frontend/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/perfectday_frontend/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  bloc: ^9.0.0
 
 dependency_overrides:
   http: 1.2.2
