--- a/lifescript001/002-implementations/client/life_script/life_script/pomodoro_break/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/pomodoro_break/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
   url_launcher_web: 2.3.3
   url_launcher_windows: 3.1.2
   #built_value: 8.1.3
-  openapi:
+  openapiPomodoroBreak:
     path: ./openapi
 
 
