--- a/lifescript001/002-implementations/client/life_script/life_script/communication-frontend/communication/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/communication-frontend/communication/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   logging: ^1.3.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
+  flutter_tts: ^4.2.2
 
 dev_dependencies:
   flutter_test:
