--- a/lifescript001/002-implementations/servers/lifescript/daily_journal_backend/pom.xml
+++ b/lifescript001/002-implementations/servers/lifescript/daily_journal_backend/pom.xml
@@ -33,7 +33,7 @@
         <archunit-junit5.version>1.2.1</archunit-junit5.version>
         <blockhound-junit-platform.version>1.0.8.RELEASE</blockhound-junit-platform.version>
         <checkstyle.version>10.12.5</checkstyle.version>
-        <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
+     <!--   <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version> -->
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
         <git-commit-id-maven-plugin.version>7.0.0</git-commit-id-maven-plugin.version>
@@ -1036,7 +1036,7 @@
             </activation>
             <build>
                 <plugins>
-                    <plugin>
+                  <!--  <plugin>
                         <groupId>net.nicoulaj.maven.plugins</groupId>
                         <artifactId>checksum-maven-plugin</artifactId>
                         <version>${checksum-maven-plugin.version}</version>
@@ -1088,7 +1088,7 @@
                             <quiet>true</quiet>
                         </configuration>
                     </plugin>
-                    <plugin>
+                    <plugin>  
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
                         <version>${maven-antrun-plugin.version}</version>
@@ -1113,7 +1113,7 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin> -->
                     <plugin>
                         <groupId>com.github.eirslett</groupId>
                         <artifactId>frontend-maven-plugin</artifactId>
