--- a/lifescript001/002-implementations/client/life_script/life_script/habittracker/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/habittracker/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_secure_storage: ^4.2.1
   flutter_riverpod: ^2.6.1
+  audioplayers: ^6.1.1
 
 dependency_overrides:
   http: 1.2.2
