--- a/lifescript001/002-implementations/client/life_script/life_script/pubspec.yaml
+++ b/lifescript001/002-implementations/client/life_script/life_script/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_swiper_view: ^1.1.8
+  model_viewer_plus: ^1.9.1
   flutter_localizations:
     sdk: flutter
   flutter_web_plugins:
@@ -20,7 +22,7 @@ dependencies:
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
-  collection: 1.19.0
+  collection: 1.19.1
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   font_awesome_flutter: 10.7.0
@@ -83,6 +85,8 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/cloud.jpg
+    - assets/human.glb
     - assets/fonts/
     - assets/images/
     - assets/videos/
@@ -90,3 +94,4 @@ flutter:
     - assets/rive_animations/
     - assets/pdfs/
     - assets/jsons/
+    
