--- a/lifescript001/002-implementations/servers/lifescript/habittracker_plan/habittrack_backend/package.json
+++ b/lifescript001/002-implementations/servers/lifescript/habittracker_plan/habittrack_backend/package.json
@@ -84,6 +84,7 @@
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.3",
     "dayjs": "1.11.13",
+    "habittrack-backend": "file:",
     "ngx-infinite-scroll": "19.0.0",
     "rxjs": "7.8.1",
     "tslib": "2.8.1",
